--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Amir Kangarloo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "morgan": "^1.10.0"
   },
