--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Amir Kangarloo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
