add README file and edite package.json

--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "rest-shop",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A Node.js RESTful API - (simple shop API)",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "keywords": [
+    "api",
+    "node",
+    "restful",
+    "restAPI"
+  ],
   "author": "Amir Kangarloo",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/amirkangarloo/rest-api-nodejs.git"
+  },
+  "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
